# TelloEDU-ROS2

./: .gitattributes  .gitignore  LICENSE  README.md
docker/: open_terminal.sh  run_container.sh
tello/: CMakeLists.txt  package.xml
tello/config/: tello_startup_params.yaml
tello/launch/: tello_startup.launch.py
tello/models/: face_recognition.pt
tello/scripts/: aruco_data.json  aruco_detection.py  aruco_tracking.py  aruco_tracking_log.json  compressed_image_viewer.py  controller.py  face_tracking.py  object_tracking.py  tello_server.py  yolo_detection.py
tello/src/: main.cpp
tello_interfaces/: CMakeLists.txt  package.xml
tello_interfaces/msg/: ArucoID.msg  TelloID.msg  TelloStatus.msg  XyXy.msg  Xywh.msg  YoloResults.msg
tello_swarm/: cmds.txt  tello_formation_swarm.py  tello_swarm.py  tello_test.py
